SimpleComplex/Database 1.x, 2018-05-21
--------------------------------------
- Tests use helpers of the Utils package.
- Release 0.9.3.

SimpleComplex/Database 1.x, 2018-05-12
--------------------------------------
- result mode renamed; from cursor mode.
- Query generic options allowed vs. specific options supported;
  and detect query option name misspelling.
- MariaDb auto-detect multi-query.
- Calling MariaDB/MySQL stored procedure _is_ possible with prepared statement
  as well as single simple query.
- Result numRows() methods deprecated because only supported for simple use/edge
  cases; by MariaDB/MySQL as well as SQL Server.
- Release 0.9.2.

SimpleComplex/Database 1.x, 2018-05-12
--------------------------------------
- MySQLi multi-query _is_ executed immediately; not until getting result set.
- Bugfix parameter substitution; wrong checks for parameter count,
  and tampered sql var forgotten.
- MariaDb result false/null checks when using result loader.
- Result nextSet() and nextRow() return boolean; only, not null for none.
- Result methods must be documented as throwing non-specific db runtime
  exception, to allow for exception type mapping; errorsToException().
- Abstract classes renamed; from 'Database...' to 'Db...'.
- MariaDB/MySQL multi-query is more of a deficiency than a feature, and separate
  multi-query interfaces/abstract classes is obsolete.
- All query and result methods must use exception type mapping.
- MsSql tests (like MariaDb) implemented and passed.

SimpleComplex/Database 1.x, 2018-05-11
--------------------------------------
- MariaDb prepared statement must not use cursor mode 'store', because then
  result binding is the only way to go - and result binding sucks IMHO.
- Turn off re-connection permanently when a query uses unbuffered cursor mode.
- Client getConnection() must not throw exception.

SimpleComplex/Database 1.x, 2018-05-10
--------------------------------------